# sillyiOSApp

./: CMakeLists.txt  Makefile  README.md  Tweak.plist  buildExport.plist  hello.m  hello.mm  info.plist  podfile
.github/workflows/: build.yml
layout/DEBIAN/: control
src/: AppDelegate.mm  MainViewController.mm  MainViewController.swift  hello.mm  main.mm
